Fixed dropdown border alignment

--- a/less/dropdown.less
+++ b/less/dropdown.less
@@ -10,6 +10,10 @@
     font-size:14px;
     min-height:32px;
     .highed-box-size;
+
+     border-top:@border-main;
+    border-bottom:@border-main;
+    border-left:@border-main;
 }
 
 .highed-dropdown-body {
@@ -27,9 +31,7 @@
 
     overflow: hidden;
 
-    border-top:@border-main;
-    border-bottom:@border-main;
-    border-left:@border-main;
+   
 
     .highed-nosel;
 
@@ -54,7 +56,7 @@
     color: @wiz-bar-color;
     position: absolute;
     right:0px;
-    top:1px;
+    top:0px;
     height:100%;
   //  border-left:@border-main;
     text-align: center;
